--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
           <nav class="navigation">
             <ul class="navigation__list">
               <li class="navigation__item">
-                <a href="" class="navigation__link"> О проекте </a>
+                <a href="#avocado-group" class="navigation__link"> О проекте </a>
               </li>
               <li class="navigation__item">
-                <a href="" class="navigation__link">Новости</a>
+                <a href="#developed-avo" class="navigation__link">Новости</a>
               </li>
               <li class="navigation__item">
-                <a href="" class="navigation__link">Услуги</a>
+                <a href="#benefits" class="navigation__link">Услуги</a>
               </li>
               <li class="navigation__item">
-                <a href="" class="navigation__link">О компании</a>
+                <a href="#about-project" class="navigation__link">О компании</a>
               </li>
               <li class="navigation__item">
-                <a href="" class="navigation__link">Команда</a>
+                <a href="#team" class="navigation__link">Команда</a>
               </li>
               <li class="navigation__item navigation__item--mobile">
                 <a href="" class="navigation__link callback"
@@ -86,7 +86,7 @@
           <img src="./images/intro-img.png" alt="" />
         </article>
 
-        <article class="about-project">
+        <article class="about-project" id="about-project">
           <div class="container">
             <div class="about-project__wrapper">
               <img src="./images/cube.png" alt="" />
@@ -136,7 +136,7 @@
           </div>
         </article>
 
-        <article class="developed-avo container">
+        <article class="developed-avo container" id="developed-avo">
           <div class="developed-avo__heading">
             <div class="developed-avo__name block-name">
               NFT, Разработаннык AVONTF STUDIO
@@ -221,7 +221,7 @@
           </ul>
         </article>
 
-        <article class="benefits container">
+        <article class="benefits container" id="benefits">
           <div class="benefits__name block-name">Услуги AVONFT Studio</div>
 
           <div class="benefits__top-desc">
@@ -547,21 +547,21 @@
         </section>
         <!-- #avocado-group -->
 
-        <article class="team container">
+        <article class="team container" id="team">
           <div class="team__title block-name">Команда AVONFT Studio</div>
 
           <div class="team-slider">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="team__item">
-                  <img src="images/team1.png" alt="" class="team__img" />
+                  <img src="images/team2.jpg" alt="" class="team__img" />
                   <div class="team__profession">Руководитель</div>
                   <div class="team__name">Сидорова Кристина</div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div class="team__item">
-                  <img src="images/team2.jpg" alt="" class="team__img" />
+                  <img src="images/team1.png" alt="" class="team__img" />
                   <div class="team__profession">Помощник руководителя</div>
                   <div class="team__name">Таучева Элина</div>
                 </div>
@@ -603,14 +603,14 @@
 
           <ul class="team__list">
             <li class="team__item">
-              <img src="images/team1.png" alt="" class="team__img" />
+              <img src="images/team2.jpg" alt="" class="team__img" />
               <div class="team__profession">Руководитель</div>
               <div class="team__name">Сидорова Кристинан</div>
             </li>
             <li class="team__item">
-              <img src="images/team2.jpg" alt="" class="team__img" />
-              <div class="team__profession">Таучева Элина</div>
-              <div class="team__name">Степан Данилин</div>
+              <img src="images/team1.png" alt="" class="team__img" />
+              <div class="team__profession">Помощник руководителя</div>
+              <div class="team__name">Таучева Элина</div>
             </li>
             <li class="team__item empty">
               <img src="images/smile.png" alt="" />
