--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@
         </div>
 
        <!--  <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script> -->
-        <script src="js/jquery-3.6.0.min.js"></script>
+        <!-- <script src="js/jquery-3.6.0.min.js"></script> -->
         <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
         <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
         <script src="https://kit.fontawesome.com/4cfcd34589.js" crossorigin="anonymous"></script>
