--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Avocado</title>
 
-        <link rel="preload" href="fonts/Bicubik.woff2" as="font" type="font/woff2" crossorigin>
-        <link rel="preload" href="fonts/nasalization rg.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
                 href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
                 rel="stylesheet"
         />
+
+        <link rel="preload" href="fonts/Bicubik.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="fonts/nasalization rg.woff2" as="font" type="font/woff2" crossorigin>
 
         <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
         <link rel="stylesheet" href="css/bootstrap/bootstrap-reboot.min.css" />
