--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link
                 href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
                 rel="stylesheet"
+                media="all"
         />
 
         <link rel="preload" href="fonts/Bicubik.woff2" as="font" type="font/woff2" crossorigin>
