--- a/index.html
+++ b/index.html
@@ -1334,10 +1334,10 @@
             </form>
         </div>
 
-        <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
-        <script src="js/jquery-3.6.0.min.js"></script>
-        <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
-        <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-        <script src="js/main.js"></script>
+        <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"async></script>
+        <script src="js/jquery-3.6.0.min.js" async></script>
+        <script src="js/bootstrap/bootstrap.bundle.min.js" async></script>
+        <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js" async></script>
+        <script src="js/main.js" async></script>
     </body>
 </html>
