--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
                     </nav>
                     <div class="mobile-right">
                         <a href="#" class="header__btn btn--transparent header__element callback"
-                            >Заказать свой NFT <img src="./images/circle_1.png" alt=""
-                        /></a>
+                            >Заказать свой NFT
+                            <picture>
+                                <source srcset="./images/circle_1.webp" type="image/webp">
+                                <img src="./images/circle_1.png" alt=""/>
+                            </picture>
+                        </a>
                         <div class="burger-mnu">
                             <span></span>
                             <span></span>
@@ -78,17 +82,29 @@
                             организации под ключ. Закажите NFT-проект, а AVONFT Studio сделает все за вас.
                         </div>
                         <a href="" class="intro__btn btn--transparent callback">
-                            Заказать свой NFT <img src="./images/circle_1.png" alt=""
-                        /></a>
+                            Заказать свой NFT
+                            <picture>
+                                <source srcset="./images/circle_1.webp" type="image/webp">
+                                <img src="./images/circle_1.png" alt=""/>
+                            </picture>
+                        </a>
                     </div>
 
-                    <img src="./images/intro-img.png" alt="" />
+                    <picture>
+                        <source srcset="./images/intro-img.webp" type="image/webp">
+                        <img src="./images/intro-img.png" alt="" />
+                    </picture>
+
                 </article>
 
                 <article class="about-project">
                     <div class="container">
                         <div class="about-project__wrapper">
-                            <img src="./images/cube.png" alt="" />
+                            <picture>
+                                <source srcset="./images/cube.webp" type="image/webp">
+                                <img src="./images/cube.png" alt="" />
+                            </picture>
+
 
                             <div class="about-project__content">
                                 <h2 class="about-project__title title">
@@ -144,7 +160,11 @@
                         <li class="developed-avo__item developed-avo__item--big">
                             <a href="#">
                                 <div class="developed-avo__item__image">
-                                    <img src="./images/dev-img.png" alt="" />
+                                    <picture>
+                                        <source srcset="./images/dev-img.webp" type="image/webp">
+                                        <img src="./images/dev-img.png" alt="" />
+                                    </picture>
+
                                 </div>
 
                                 <div class="developed-avo__content">
@@ -156,7 +176,11 @@
                                     <p>NFT проект был разработан AVONFT Studio для (X) организации.</p>
                                     <p>Он был продан за N млн. $.</p>
                                     <div class="developed-avo__author">
-                                        <img src="./images/author.png" alt="" />
+                                        <picture>
+                                            <source srcset="./images/author.webp" type="image/webp">
+                                            <img src="./images/author.png" alt="" />
+                                        </picture>
+
                                         <div class="developed-avo__bottom">
                                             <h4>автор</h4>
                                             <p>Петросян Сос</p>
@@ -172,7 +196,11 @@
                                     <button class="popular__save">
                                         <i class="fa-heart fa-regular"></i>
                                     </button>
-                                    <img src="./images/dev-img-2.png" alt="" />
+                                    <picture>
+                                        <source srcset="./images/dev-img-2.webp" type="image/webp">
+                                        <img src="./images/dev-img-2.png" alt="" />
+                                    </picture>
+
 
                                     <div class="developed-avo__price">100 avo</div>
                                 </div>
@@ -194,7 +222,10 @@
                                     <button class="popular__save">
                                         <i class="fa-heart fa-regular"></i>
                                     </button>
-                                    <img src="./images/dev-img.png" alt="" />
+                                    <picture>
+                                        <source srcset="./images/dev-img.webp" type="image/webp">
+                                        <img src="./images/dev-img.png" alt="" />
+                                    </picture>
 
                                     <div class="developed-avo__price">100 avo</div>
                                 </div>
@@ -225,7 +256,11 @@
                             <div class="swiper-slide">
                                 <div class="benefits__item">
                                     <div class="benefits__heading">
-                                        <img src="images/benefits-icon_5.png" alt="" class="benefits__icon" />
+                                        <picture>
+                                            <source srcset="./images/benefits-icon_5.webp" type="image/webp">
+                                            <img src="images/benefits-icon_5.png" alt="" class="benefits__icon" />
+                                        </picture>
+
                                     </div>
                                     <div class="benefits__content">
                                         <div class="benefits__title">Создание уникального NFT или коллекции</div>
@@ -238,7 +273,11 @@
                             <div class="swiper-slide">
                                 <div class="benefits__item">
                                     <div class="benefits__heading">
-                                        <img src="images/benefits-icon_4.png" alt="" class="benefits__icon" />
+                                        <picture>
+                                            <source srcset="./images/benefits-icon_4.webp" type="image/webp">
+                                            <img src="images/benefits-icon_4.png" alt="" class="benefits__icon" />
+                                        </picture>
+
                                     </div>
                                     <div class="benefits__content">
                                         <div class="benefits__title">Продвижение вашего NFT-проекта</div>
@@ -253,7 +292,10 @@
                             <div class="swiper-slide">
                                 <div class="benefits__item">
                                     <div class="benefits__heading">
-                                        <img src="images/benefits-icon_1.png" alt="" class="benefits__icon" />
+                                        <picture>
+                                            <source srcset="./images/benefits-icon_1.webp" type="image/webp">
+                                            <img src="images/benefits-icon_1.png" alt="" class="benefits__icon" />
+                                        </picture>
                                     </div>
                                     <div class="benefits__content">
                                         <div class="benefits__title">Размещение на маркетплейсе</div>
@@ -266,7 +308,10 @@
                             <div class="swiper-slide">
                                 <div class="benefits__item">
                                     <div class="benefits__heading">
-                                        <img src="images/benefits-icon_2.png" alt="" class="benefits__icon" />
+                                        <picture>
+                                            <source srcset="./images/benefits-icon_2.webp" type="image/webp">
+                                            <img src="images/benefits-icon_2.png" alt="" class="benefits__icon" />
+                                        </picture>
                                     </div>
                                     <div class="benefits__content">
                                         <div class="benefits__title">Юридическое сопровождение</div>
@@ -285,7 +330,10 @@
                     <ul class="benefits__list">
                         <li class="benefits__item">
                             <div class="benefits__heading">
-                                <img src="images/benefits-icon_5.png" alt="" class="benefits__icon" />
+                                <picture>
+                                    <source srcset="./images/benefits-icon_5.webp" type="image/webp">
+                                    <img src="images/benefits-icon_5.png" alt="" class="benefits__icon" />
+                                </picture>
                             </div>
                             <div class="benefits__content">
                                 <div class="benefits__title">Создание уникального NFT или коллекции</div>
@@ -296,7 +344,10 @@
                         </li>
                         <li class="benefits__item">
                             <div class="benefits__heading">
-                                <img src="images/benefits-icon_4.png" alt="" class="benefits__icon" />
+                                <picture>
+                                    <source srcset="./images/benefits-icon_4.webp" type="image/webp">
+                                    <img src="images/benefits-icon_4.png" alt="" class="benefits__icon" />
+                                </picture>
                             </div>
                             <div class="benefits__content">
                                 <div class="benefits__title">Продвижение вашего NFT-проекта</div>
@@ -309,7 +360,10 @@
                         </li>
                         <li class="benefits__item">
                             <div class="benefits__heading">
-                                <img src="images/benefits-icon_1.png" alt="" class="benefits__icon" />
+                                <picture>
+                                    <source srcset="./images/benefits-icon_1.webp" type="image/webp">
+                                    <img src="images/benefits-icon_1.png" alt="" class="benefits__icon" />
+                                </picture>
                             </div>
                             <div class="benefits__content">
                                 <div class="benefits__title">Размещение на маркетплейсе</div>
@@ -320,7 +374,10 @@
                         </li>
                         <li class="benefits__item">
                             <div class="benefits__heading">
-                                <img src="images/benefits-icon_2.png" alt="" class="benefits__icon" />
+                                <picture>
+                                    <source srcset="./images/benefits-icon_2.webp" type="image/webp">
+                                    <img src="images/benefits-icon_2.png" alt="" class="benefits__icon" />
+                                </picture>
                             </div>
                             <div class="benefits__content">
                                 <div class="benefits__title">Юридическое сопровождение</div>
@@ -454,14 +511,21 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="team__item">
-                                    <img src="images/team1.png" alt="" class="team__img" />
+                                    <picture>
+                                        <source srcset="./images/team1.webp" type="image/webp">
+                                        <img src="images/team1.png" alt="" class="team__img" />
+                                    </picture>
+
                                     <div class="team__profession">Помощник руководителя</div>
                                     <div class="team__name">Таучева Элина</div>
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="team__item">
-                                    <img src="images/team3.png" alt="" class="team__img" />
+                                    <picture>
+                                        <source srcset="./images/team3.webp" type="image/webp">
+                                        <img src="images/team3.png" alt="" class="team__img" />
+                                    </picture>
                                     <div class="team__profession">Амбассадор компании</div>
                                     <div class="team__name">Оздамар Ксения</div>
                                 </div>
@@ -469,7 +533,10 @@
 
                             <div class="swiper-slide">
                                 <div class="team__item empty">
-                                    <img src="images/smile.png" alt="" />
+                                    <picture>
+                                        <source srcset="./images/smile.webp" type="image/webp">
+                                        <img src="images/smile.png" alt="" class="team__img" />
+                                    </picture>
                                     <div class="team__message">
                                         Мы постоянно развиваемся и работаем с лидерами криптоиндустрии. Если ты хочешь
                                         создавать будущее вмесете с нами, мы всегда в поиске новых талантов!
@@ -488,17 +555,26 @@
                             <div class="team__name">Сидорова Кристина</div>
                         </li>
                         <li class="team__item">
-                            <img src="images/team1.png" alt="" class="team__img" />
+                            <picture>
+                                <source srcset="./images/team1.webp" type="image/webp">
+                                <img src="images/team1.png" alt="" class="team__img" />
+                            </picture>
                             <div class="team__profession">Помощник руководителя</div>
                             <div class="team__name">Таучева Элина</div>
                         </li>
                         <li class="team__item">
-                            <img src="images/team3.png" alt="" class="team__img" />
+                            <picture>
+                                <source srcset="./images/team3.webp" type="image/webp">
+                                <img src="images/team3.png" alt="" class="team__img" />
+                            </picture>
                             <div class="team__profession">Амбассадор компании</div>
                             <div class="team__name">Оздамар Ксения</div>
                         </li>
                         <li class="team__item empty">
-                            <img src="images/smile.png" alt="" />
+                            <picture>
+                                <source srcset="./images/smile.webp" type="image/webp">
+                                <img src="images/smile.png" alt="" class="team__img" />
+                            </picture>
                             <div class="team__message">
                                 Мы постоянно развиваемся и работаем с лидерами криптоиндустрии. Если ты хочешь создавать
                                 будущее вмесете с нами, мы всегда в поиске новых талантов!
@@ -512,7 +588,12 @@
         <footer class="footer" id="footer">
             <div class="container">
                 <div class="footer__information">
-                    <a href="" class="footer__logo"><img src="images/logo.svg" alt="" /></a>
+                    <a href="" class="footer__logo">
+                        <picture>
+                            <img src="images/logo.svg" alt="" />
+                        </picture>
+
+                    </a>
                     <div class="footer__desc">
                         <h3 class="footer__avo title">
                             <span>AVONFT</span>
@@ -555,7 +636,11 @@
                 </div>
                 <div class="footer__contacts">
                     <a href="" class="footer__transparent-btn">
-                        <img src="images/telegram.png" alt="" />
+                        <picture>
+                            <source srcset="./images/telegram.webp" type="image/webp">
+                            <img src="images/telegram.png" alt="" />
+                        </picture>
+
                         <span>Telegram бот avonft Sport</span>
                     </a>
                     <ul class="footer__buttons">
@@ -1334,10 +1419,10 @@
             </form>
         </div>
 
-        <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"async></script>
-        <script src="js/jquery-3.6.0.min.js" async></script>
-        <script src="js/bootstrap/bootstrap.bundle.min.js" async></script>
-        <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js" async></script>
-        <script src="js/main.js" async></script>
+        <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript" defer></script>
+        <script src="js/jquery-3.6.0.min.js" defer></script>
+        <script src="js/bootstrap/bootstrap.bundle.min.js" defer></script>
+        <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js" defer></script>
+        <script src="js/main.js" defer></script>
     </body>
 </html>
