--- a/index.html
+++ b/index.html
@@ -1419,6 +1419,17 @@
             </form>
         </div>
 
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                if (get_browser()["name"] === "Safari") {
+                    let link = document.createElement("link");
+                    link.setAttribute("rel", "stylesheet");
+                    link.setAttribute("media", "all");
+                    link.setAttribute("href", "css/styles-safari.css");
+                    document.querySelector("head").appendChild(link);
+                }
+            });
+        </script>
         <script src="js/jquery-3.6.0.min.js" defer></script>
         <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript" defer></script>
         <script src="js/bootstrap/bootstrap.bundle.min.js" defer></script>
