--- a/index.html
+++ b/index.html
@@ -1419,6 +1419,12 @@
             </form>
         </div>
 
+
+        <script src="js/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
+        <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
+        <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+        <script src="js/main.js"></script>
         <script>
             document.addEventListener("DOMContentLoaded", function () {
                 if (get_browser()["name"] === "Safari") {
@@ -1430,10 +1436,5 @@
                 }
             });
         </script>
-        <script src="js/jquery-3.6.0.min.js" defer></script>
-        <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript" defer></script>
-        <script src="js/bootstrap/bootstrap.bundle.min.js" defer></script>
-        <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js" defer></script>
-        <script src="js/main.js" defer></script>
     </body>
 </html>
