--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
                     <nav class="navigation">
                         <ul class="navigation__list">
                             <li class="navigation__item">
-                                <a href="" class="navigation__link"> О проекте </a>
+                                <a href="#avocado-group" class="navigation__link scroll"> О проекте </a>
                             </li>
                             <li class="navigation__item">
-                                <a href="" class="navigation__link">Новости</a>
+                                <a href="#developed-avo" class="navigation__link scroll">Новости</a>
                             </li>
                             <li class="navigation__item">
-                                <a href="" class="navigation__link">Услуги</a>
+                                <a href="#benefits" class="navigation__link scroll">Услуги</a>
                             </li>
                             <li class="navigation__item">
-                                <a href="" class="navigation__link">О компании</a>
+                                <a href="#about" class="navigation__link scroll">О компании</a>
                             </li>
                             <li class="navigation__item">
-                                <a href="" class="navigation__link">Команда</a>
+                                <a href="#team" class="navigation__link scroll">Команда</a>
                             </li>
                             <li class="navigation__item navigation__item--mobile">
                                 <a href="" class="navigation__link callback">Заказать свой NFT</a>
@@ -71,7 +71,7 @@
                 </div>
             </header>
             <main>
-                <article class="intro container">
+                <article id="intro" class="intro container">
                     <div class="intro__heading heading">
                         <h1 class="intro__title title">
                             <span>AVONFT</span> <br />
@@ -97,7 +97,7 @@
 
                 </article>
 
-                <article class="about-project">
+                <article id="about" class="about-project">
                     <div class="container">
                         <div class="about-project__wrapper">
                             <picture>
@@ -147,7 +147,7 @@
                     </div>
                 </article>
 
-                <article class="developed-avo container">
+                <article id="developed-avo" class="developed-avo container">
                     <div class="developed-avo__heading">
                         <div class="developed-avo__name block-name">NFT, Разработаннык AVONTF STUDIO</div>
                         <a href="" class="developed-avo__link link-section">
@@ -243,7 +243,7 @@
                     </ul>
                 </article>
 
-                <article class="benefits container">
+                <article id="benefits" class="benefits container">
                     <div class="benefits__name block-name">Услуги AVONFT Studio</div>
 
                     <div class="benefits__top-desc">
@@ -497,7 +497,7 @@
                 </section>
                 <!-- #avocado-group -->
 
-                <article class="team container">
+                <article id="team" class="team container">
                     <div class="team__title block-name">Команда AVONFT Studio</div>
 
                     <div class="team-slider">
